[gd_scene load_steps=9 format=3 uid="uid://lwbl3m3ictn3"]

[ext_resource type="Script" uid="uid://b53t5mtref5mn" path="res://launcher.gd" id="1_4emaf"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_cvfd6"]
bg_color = Color(0.117647, 0.133333, 0.207843, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_6i4n2"]
bg_color = Color(0.314316, 0.314316, 0.314316, 1)
border_width_left = 4
border_width_top = 4
border_width_right = 4
border_width_bottom = 4
border_color = Color(0.886275, 0.760784, 0.564706, 1)
corner_radius_top_left = 20
corner_radius_top_right = 20
corner_radius_bottom_right = 20
corner_radius_bottom_left = 20

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_rcfql"]
bg_color = Color(0.545098, 0.827451, 0.866667, 1)
border_width_left = 4
border_width_top = 4
border_width_right = 4
border_width_bottom = 4
border_color = Color(0.886275, 0.760784, 0.564706, 1)
corner_radius_top_left = 20
corner_radius_top_right = 20
corner_radius_bottom_right = 20
corner_radius_bottom_left = 20

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_bm0ek"]
bg_color = Color(0.85098, 0.494118, 0.494118, 1)
border_width_left = 4
border_width_top = 4
border_width_right = 4
border_width_bottom = 4
border_color = Color(0.886275, 0.760784, 0.564706, 1)
corner_radius_top_left = 25
corner_radius_top_right = 25
corner_radius_bottom_right = 25
corner_radius_bottom_left = 25

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_vcerv"]
bg_color = Color(0.290196, 0.352941, 0.498039, 1)
border_width_left = 4
border_width_top = 4
border_width_right = 4
border_width_bottom = 4
border_color = Color(0.886275, 0.760784, 0.564706, 1)
corner_radius_top_left = 25
corner_radius_top_right = 25
corner_radius_bottom_right = 25
corner_radius_bottom_left = 25

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_uy6ji"]
bg_color = Color(0.180392, 0.223529, 0.313726, 1)
border_width_left = 4
border_width_top = 4
border_width_right = 4
border_width_bottom = 4
border_color = Color(0.886275, 0.760784, 0.564706, 1)
corner_radius_top_left = 25
corner_radius_top_right = 25
corner_radius_bottom_right = 25
corner_radius_bottom_left = 25

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_4emaf"]
bg_color = Color(0.235294, 0.266667, 0.360784, 1)
border_width_left = 4
border_width_top = 4
border_width_right = 4
border_width_bottom = 4
border_color = Color(0.886275, 0.760784, 0.564706, 1)
corner_radius_top_left = 25
corner_radius_top_right = 25
corner_radius_bottom_right = 25
corner_radius_bottom_left = 25

[node name="Launcher" type="Node2D"]
script = ExtResource("1_4emaf")

[node name="Control" type="Control" parent="."]
layout_mode = 3
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -4.0
offset_top = -1.0
offset_right = 1151.0
offset_bottom = 647.0
grow_horizontal = 2
grow_vertical = 2

[node name="Background" type="Panel" parent="Control"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -575.0
offset_top = -323.5
offset_right = 575.0
offset_bottom = 323.5
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_cvfd6")

[node name="HBoxContainer" type="HBoxContainer" parent="Control"]
layout_mode = 1
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 87.0
offset_top = -133.0
offset_right = -42.0
offset_bottom = -33.0
grow_horizontal = 2
grow_vertical = 0
alignment = 1

[node name="VBoxContainer" type="VBoxContainer" parent="Control/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 4
size_flags_stretch_ratio = 0.2

[node name="ProgressBar" type="ProgressBar" parent="Control/HBoxContainer/VBoxContainer"]
custom_minimum_size = Vector2(750, 50)
layout_mode = 2
theme_override_colors/font_color = Color(0.929412, 0.929412, 0.929412, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_styles/background = SubResource("StyleBoxFlat_6i4n2")
theme_override_styles/fill = SubResource("StyleBoxFlat_rcfql")
value = 50.0

[node name="PlayButton" type="Button" parent="Control/HBoxContainer"]
custom_minimum_size = Vector2(200, 100)
layout_mode = 2
size_flags_horizontal = 10
size_flags_vertical = 4
theme_override_styles/disabled = SubResource("StyleBoxFlat_bm0ek")
theme_override_styles/hover = SubResource("StyleBoxFlat_vcerv")
theme_override_styles/pressed = SubResource("StyleBoxFlat_uy6ji")
theme_override_styles/normal = SubResource("StyleBoxFlat_4emaf")
text = "Play"

[node name="HTTPRequest" type="HTTPRequest" parent="."]

[node name="FileDownloader" type="HTTPRequest" parent="."]
use_threads = true

[connection signal="pressed" from="Control/HBoxContainer/PlayButton" to="." method="_on_play_button_pressed"]
[connection signal="request_completed" from="HTTPRequest" to="." method="_on_http_request_request_completed"]
[connection signal="request_completed" from="FileDownloader" to="." method="_on_file_downloader_request_completed"]
